small refactor w.i.p